packages/astro/e2e/fixtures/errors/src/components/SvelteDirectiveError.svelte
<h1>I shouldn’t be here</h1>
  